    - Changed kova recipes to always spit out astatine.
    - Changed sodium sulfite to use hydrogen sulfide, as it should have.
    - Reworked sand/glass processing: early glass takes gravel (which is less efficient), but eventually you unlock better crushing techniques to actually make sand.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
    - Finally got rid of the plastic bar item that appears in the factoriopedia and item menus.
    - Re-ordered science to actually be in the correct order (normal > plastic > francium)
    - Fixed the ordering of certain subgroups, for real this time.
    - Fixed random things like explosives not being in the presumably correct category.
    - Made slugs actually work with 2.0, im not sure how well they now work so any balance or suggestions are greatly appreciated.
    - Changed byproduct handling to be unlockable from ezekiel processing, and not transition metal leeching.
    - Added the heavy lubricant recipe of solar cells to lubricant technology.
    - Fixed ezekiel ore leeching to actually give the correct amount of ore. This hurts you more then it hurts me, i assure you.
    - Fixed the category tabs not using up the amount of space they have.
    - Fixed molten metal capatalisation.
    - Revamped all ammo recipes, to be cheaper and just better.
    - Made the health bio-upgrade's description be more relevant.
    - Reworked values for battery capacity bonuses, increasing the amount you get.
    - Fixed health bio-modules not doubling in amount at the right technology.

---------------------------------------------------------------------------------------------------
Version: 0.6.150
Date: 2025-01-25
  The they just HADDD to change scales Update:

  Fixes:
    - Fixed some icons being too small on belts.
